# magicbane

./: .gitignore  .travis.yml  README.md  magicbane.cabal  package.yaml  stack.yaml
examples/: larger.hs  tiny.hs
